Issue #3189777 by agami4: Add horizontal scroll for the comment-content block (#2120)

--- a/themes/socialbase/assets/css/comment.css
+++ b/themes/socialbase/assets/css/comment.css
@@ -35,6 +35,7 @@ a[id^="comment-"] {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
+  overflow-x: auto;
 }
 
 .comment__author {
